--- a/2day.html
+++ b/2day.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
 </head>
-
+<<colgroup>
+  <col>
+</colgroup>
 <body>
-
+<Colour:red">
 </body>
-
+<mathor>
 </html>
